--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,7 +30,7 @@ main {
 
 .hero {
     text-align: center;
-    background: url('../images/hero.jpg') no-repeat center center/cover;
+    background: url('../images/soccer-logo.jpg') no-repeat center center/cover;
     color: #fff;
     padding: 50px 0;
 }
